--- a/_posts/2016-09-26-bem-vindo.md
+++ b/_posts/2016-09-26-bem-vindo.md
@@ -3,7 +3,8 @@ layout: post
 title: "Sejam todos bem-vindos"
 date: 2016-09-20 00:00:00
 description: 'Post 0'
-color: '#4f8793'
+main-class: 'html'
+color: '#EB7728'
 categories:
 twitter_text: 'Meu primeiro post no Blog.'
 introduction: "Meu primeiro post no Blog."
